# Epicinium-lib-rs

./: .gitignore  Cargo.toml  README.md  build.make  build.rs
epicinium/: .config.make  Makefile
epicinium/archive/windows64/: ABOUT.txt
epicinium/libs/plog/: Init.h  Log.h  Logger.h  Record.h  Util.h
epicinium/src/ai/: ai.cpp  ai.hpp  aibrawlingbear.cpp  aibrawlingbear.hpp  aibrawlingbearfree.cpp  aibrawlingbearfree.hpp  aichallenge.cpp  aichallenge.hpp  aicommander.cpp  aicommander.hpp  aihungryhippo.cpp  aihungryhippo.hpp  ailibrary.cpp  ailibrary.hpp  aineuralnewt.cpp  aineuralnewt.hpp  aiquickquack.cpp  aiquickquack.hpp  airampantrhino.cpp  airampantrhino.hpp  aitutorialturtle.cpp  aitutorialturtle.hpp  bot.cpp  bot.hpp  newtbrain.cpp  newtbrain.hpp
epicinium/src/common/: .cu-common.cpp  base32.hpp  clock.cpp  clock.hpp  constructordebugger.cpp  constructordebugger.hpp  coredump.cpp  coredump.hpp  header.hpp  implodingptr.hpp  keycode.hpp  language.cpp  language.hpp  libloader.hpp  locator.cpp  locator.hpp  loginstaller.cpp  loginstaller.hpp  parseerror.hpp  point.cpp  point.hpp  randomizer.hpp  setting.cpp  setting.hpp  settings.cpp  settings.hpp  sizeiter.hpp  source.hpp  stringref.cpp  stringref.hpp  system.cpp  system.hpp  version.cpp  version.hpp  writer.cpp  writer.hpp
epicinium/src/logic/: aim.cpp  aim.hpp  area.hpp  attacker.cpp  attacker.hpp  automaton.cpp  automaton.hpp  (+92 more)
src/: binding.rs  error.rs  lib.rs  log.rs
src/log/: mod.rs  severity.rs
src/logic/: ai.rs  automaton.rs  change.rs  difficulty.rs  map.rs  mod.rs  order.rs  player.rs
(+10 files in other folders)
