[package]
name = "epicinium_lib"
version = "0.35.0"
authors = ["Sander in 't Veld <sanderintveld@hotmail.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"
readme = "README.md"
description = "Rust bindings for libepicinium, the game logic library of the strategy game Epicinium."
homepage = "https://abunchofhacks.coop"
repository = "https://github.com/abunchofhacks/Epicinium-lib-rs"
keywords = ["gamedev"]

[features]

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
log = "*"
libc = "*"
