[package]
name = "epicinium_lib"
version = "1.0.4"
authors = ["Sander in 't Veld <sanderintveld@hotmail.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"
readme = "README.md"
description = "Rust bindings for libepicinium, the game logic library of the strategy game Epicinium."
homepage = "https://abunchofhacks.coop"
repository = "https://github.com/abunchofhacks/Epicinium-lib-rs"
keywords = ["game","gamedev","ffi",]
categories = ["games", "api-bindings"]

[features]
defaults = []

candidate = []
version-is-dev = []

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
log = "^0.4"
libc = "^0.2"

[profile.release]
debug = true
